force-app/main/default/objects/Service_Work_Item__c/Service_Work_Item__c.object-meta.xml
<CustomObject>
    <label>Service Work Item</label>
    <nameField>
        <label>Work Item Number</label>
        <displayFormat>SWI-{00000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>