force-app/main/default/objects/Service_Work_Item__c/fields/Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>Accepted_At__c</fullName>
    <label>Accepted At</label>
    <type>DateTime</type>
</CustomField>