force-app/main/default/objects/Service_Work_Item__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <label>Assigned Agent</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Service_Agent__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>