force-app/main/default/objects/Service_Work_Item__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <description>Kept in sync with Assigned Agent so list views and reports filter on the running user.</description>
    <label>Assigned User</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Service Work Items</relationshipLabel>
    <relationshipName>Service_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>