force-app/main/default/objects/Service_Work_Item__c/fields/Capacity_Weight__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Weight__c</fullName>
    <label>Capacity Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>1</defaultValue>
</CustomField>