force-app/main/default/objects/Service_Work_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Work Items</relationshipLabel>
    <relationshipName>Service_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>