force-app/main/default/objects/Service_Work_Item__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Unrestricted on purpose - add values as teams bring new work types in.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <default>true</default>
                <label>Case</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Credit Review</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>