force-app/main/default/objects/Service_Work_Item__c/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Transferred Out</fullName>
            </value>
            <value>
                <fullName>Canceled by Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>