force-app/main/default/objects/Service_Work_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Work Items</relationshipLabel>
    <relationshipName>Service_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>