force-app/main/default/objects/Service_Work_Item__c/fields/Decline_Count__c.field-meta.xml
<CustomField>
    <fullName>Decline_Count__c</fullName>
    <label>Decline Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>