force-app/main/default/objects/Service_Work_Item__c/fields/Excluded_Agent_Ids__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Agent_Ids__c</fullName>
    <description>Semicolon separated agent Ids that declined or timed out. Skipped on re-route.</description>
    <label>Excluded Agent Ids</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>