force-app/main/default/objects/Service_Work_Item__c/fields/Handle_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_Minutes__c</fullName>
    <formula>IF(OR(ISBLANK(Accepted_At__c), ISBLANK(Completed_At__c)), 0, (Completed_At__c - Accepted_At__c) * 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <label>Handle Time Minutes</label>
    <type>Number</type>
</CustomField>