force-app/main/default/objects/Service_Work_Item__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND(NOT(ISBLANK(Due_At__c)), ISBLANK(Completed_At__c), Due_At__c &lt; NOW())</formula>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>