force-app/main/default/objects/Service_Work_Item__c/fields/Last_Routing_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Routing_Error__c</fullName>
    <label>Last Routing Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>