force-app/main/default/objects/Service_Work_Item__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Lower routes first. Escalation lowers this value.</description>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>5</defaultValue>
</CustomField>