force-app/main/default/objects/Service_Work_Item__c/fields/Push_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Push_Expires_At__c</fullName>
    <label>Push Expires At</label>
    <type>DateTime</type>
</CustomField>