force-app/main/default/objects/Service_Work_Item__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Service_Queue__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>