force-app/main/default/objects/Service_Work_Item__c/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <description>Semicolon separated. Skill Based routing only considers agents holding all of these.</description>
    <label>Required Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>