force-app/main/default/objects/Service_Work_Item__c/fields/Routed_At__c.field-meta.xml
<CustomField>
    <fullName>Routed_At__c</fullName>
    <label>Routed At</label>
    <type>DateTime</type>
</CustomField>