force-app/main/default/objects/Service_Work_Item__c/fields/Routing_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Routing_Attempts__c</fullName>
    <label>Routing Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>