force-app/main/default/objects/Service_Work_Item__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Id of the Case, Lead, custom object row or anything else this work item represents.</description>
    <label>Source Record Id</label>
    <length>18</length>
    <externalId>true</externalId>
    <type>Text</type>
</CustomField>