force-app/main/default/objects/Service_Work_Item__c/fields/Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Reason__c</fullName>
    <label>Transfer Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>