force-app/main/default/objects/Service_Work_Item__c/fields/Wait_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time_Minutes__c</fullName>
    <formula>IF(ISBLANK(Requested_At__c), 0, IF(ISBLANK(Accepted_At__c), (NOW() - Requested_At__c) * 1440, (Accepted_At__c - Requested_At__c) * 1440))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <label>Wait Time Minutes</label>
    <type>Number</type>
</CustomField>